Bug 287737 - closing an instance of grouped windows keeps the remaining window list free flowing
Summary: closing an instance of grouped windows keeps the remaining window list free f...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-28 09:41 UTC by m.wege
Modified: 2011-11-28 16:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (20.85 KB, image/png)
2011-11-28 09:41 UTC, m.wege
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2011-11-28 09:41:49 UTC
Created attachment 66142 [details]
screenshot 

Version:           unspecified (using KDE 4.7.2) 
OS:                Linux

Not a big issue, but it does not really look good. If you have several instance of Konqueror (or any other programm) open which are set to group in the panel, then close one of them by clicking first on the panel entry which then shows the list of windows belonging to that entry and then right click on of them, the list of the remaining windows will not appear directly above the panel as it is normal but will appear free floting above the panel. This happens even if you close the the top entry in the list.

Reproducible: Always

Steps to Reproduce:
As described above, if you can not reproduce, please ask.

Actual Results:  
like described.

Expected Results:  
The remaining window list should be directly attached at the panel as it would be normal.

Screenshot attached showing the problem.
Comment 1 Aaron J. Seigo 2011-11-28 16:13:22 UTC
Git commit 962d81f95fae9be9aa51aa942c077fa9e12e4edb by Aaron Seigo.
Committed on 28/11/2011 at 17:12.
Pushed by aseigo into branch 'master'.

sync the dialog to the graphics widget before moving it

BUG:287737

M  +1    -0    plasma/desktop/applets/tasks/taskgroupitem.cpp

http://commits.kde.org/kde-workspace/962d81f95fae9be9aa51aa942c077fa9e12e4edb
Comment 2 m.wege 2011-11-28 16:15:09 UTC
Wow that was fast. Thanks!