sync the dialog to the graphics widget before moving it

BUG:287737